Added emojis, some blackjack tests and fixed issue with aces not being counted properly